[package]
name = "examples_rclrs_message_demo"
version = "0.5.0"
authors = ["Nikolai Morin <nnmmgit@gmail.com>"]
edition = "2021"

[[bin]]
name = "message_demo"
path = "src/message_demo.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rclrs = "0.6"
rosidl_runtime_rs = "0.5"
rclrs_example_msgs = { version = "0.5", features = ["serde"] }
serde_json = "1.0"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"
